--- a/index.html
+++ b/index.html
@@ -8,66 +8,68 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <header>
-      <!-- create navigation -->
-      <nav>
-        <a class="logo" href="./index.html">WEB<span class="logo-header">STUDIO</span></a>
-        <ul class="list">
-          <li><a class="nav-links" href="./index.html">Studio</a></li>
-          <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="nav-links" href="">Contacts</a></li>
+    <header class="header">
+      <!-- navigation -->
+      <nav class="header-nav">
+        <a class="logo link" href="./index.html">WEB<span class="header-logo">STUDIO</span></a>
+        <ul class="header-list list">
+          <li><a class="header-link link" href="./index.html">Studio</a></li>
+          <li><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="header-link link" href="">Contacts</a></li>
         </ul>
       </nav>
 
-      <!-- create contacts -->
-      <ul class="list">
-        <li><a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <!-- contacts -->
+      <ul class="header-contacts list">
+        <li>
+          <a class="header-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li><a class="header-contact link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
 
     <main>
-      <!-- create section title site -->
-      <section>
-        <h1 class="hero">Effective Solutions for Your Business</h1>
-        <button class="button" type="button">Order Service</button>
+      <!-- section "Hero" -->
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="btn" type="button">Order Service</button>
       </section>
 
-      <!-- create section "About WEBSTUDIO" -->
-      <section>
-        <h2 class="hiden-text">About WEBSTUDIO</h2>
-        <ul class="list">
+      <!-- section "About WEBSTUDIO" -->
+      <section class="about">
+        <h2 class="hiden">About WEBSTUDIO</h2>
+        <ul class="about-list list">
           <li>
-            <h3 class="list-items">Strategy</h3>
-            <p class="item-text">
+            <h3 class="about-item item-title">Strategy</h3>
+            <p class="about-text text">
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
           <li>
-            <h3 class="list-items">Punctuality</h3>
-            <p class="item-text">
+            <h3 class="about-item item-title">Punctuality</h3>
+            <p class="about-text text">
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
           <li>
-            <h3 class="list-items">Diligence</h3>
-            <p class="item-text">
+            <h3 class="about-item item-title">Diligence</h3>
+            <p class="about-text text">
               Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="list-items">Technologies</h3>
-            <p class="item-text">
+            <h3 class="about-item item-title">Technologies</h3>
+            <p class="about-text text">
               Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.
             </p>
@@ -75,16 +77,16 @@
         </ul>
       </section>
 
-      <!-- create section "What are we doing" -->
-      <section>
-        <h2 class="section-title">What are we doing</h2>
+      <!-- section "What are we doing" -->
+      <section class="direction">
+        <h2 class="direction-title section-title">What are we doing</h2>
         <ul class="list">
-          <li>
+          <li class="direction-item">
             <img src="./images/profile/monitor.jpg" alt="Monitor" width="360" height="300" />
           </li>
         </ul>
         <ul class="list">
-          <li>
+          <li class="direction-item">
             <img
               src="./images/profile/screens-phone.jpg"
               alt="Screens phone"
@@ -94,7 +96,7 @@
           </li>
         </ul>
         <ul class="list">
-          <li>
+          <li class="direction-item">
             <img
               src="./images/profile/phone-in-hand.jpg"
               alt="Phone in hand"
@@ -106,51 +108,53 @@
       </section>
 
       <!-- create section "Our Team" -->
-      <section class="section-fon">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="list text-align">
+      <section class="team">
+        <h2 class="team-title section-title">Our Team</h2>
+        <ul class="team-list list">
           <li>
-            <h3 class="list-items">Mark Guerrero</h3>
-            <p class="item-text">Product Designer</p>
             <img
               src="./images/team/mark-guerrero.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
             />
+            <h3 class="team-item item-title">Mark Guerrero</h3>
+            <p class="team-text text">Product Designer</p>
           </li>
           <li>
-            <h3 class="list-items">Tom Ford</h3>
-            <p class="item-text">Frontend Developer</p>
             <img src="./images/team/tom-ford.jpg" alt="Tom Ford" width="264" height="260" />
+            <h3 class="team-item item-title">Tom Ford</h3>
+            <p class="team-text text">Frontend Developer</p>
           </li>
           <li>
-            <h3 class="list-items">Camila Garcia</h3>
-            <p class="item-text">Marketing</p>
             <img
               src="./images/team/camila-garcia.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
             />
+            <h3 class="team-item item-title">Camila Garcia</h3>
+            <p class="team-text text">Marketing</p>
           </li>
           <li>
-            <h3 class="list-items">Daniel Wilson</h3>
-            <p class="item-text">UI Designer</p>
             <img
               src="./images/team/daniel-wilson.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
+            <h3 class="team-item item-title">Daniel Wilson</h3>
+            <p class="team-text text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="logo line-height" href="./index.html">WEB<span class="logo-footer">STUDIO</span></a>
-      <p class="text-footer">
+      <a class="logo link line-height" href="./index.html"
+        >WEB<span class="footer-logo">STUDIO</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
