--- a/portfolio.html
+++ b/portfolio.html
@@ -8,51 +8,53 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
-    <header>
-      <!-- create navigation -->
-      <nav>
-        <a class="logo" href="./index.html">WEB<span class="logo-header">STUDIO</span></a>
-        <ul class="list">
-          <li><a class="nav-links" href="./index.html">Studio</a></li>
-          <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
-          <li><a class="nav-links" href="">Contacts</a></li>
+    <header class="header">
+      <!-- navigation -->
+      <nav class="header-nav">
+        <a class="logo link" href="./index.html">WEB<span class="header-logo">STUDIO</span></a>
+        <ul class="header-list list">
+          <li><a class="header-link link" href="./index.html">Studio</a></li>
+          <li><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="header-link link" href="">Contacts</a></li>
         </ul>
       </nav>
 
-      <!-- create contacts -->
-      <ul class="list">
-        <li><a class="contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <!-- contacts -->
+      <ul class="header-contacts list">
+        <li>
+          <a class="header-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li><a class="header-contact link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
     </header>
 
     <main>
-      <h1 class="hiden-text">Portfolio</h1>
+      <h1 class="hiden">Portfolio</h1>
 
       <section>
-        <!-- create list of filters buttons -->
-        <h2 class="hiden-text">List of filters</h2>
-        <ul class="list">
-          <li><button class="button-filters" type="button">All</button></li>
-          <li><button class="button-filters" type="button">Web Site</button></li>
-          <li><button class="button-filters" type="button">App</button></li>
-          <li><button class="button-filters" type="button">Design</button></li>
-          <li><button class="button-filters" type="button">Marketing</button></li>
+        <!-- list of filter buttons -->
+        <h2 class="hiden">List of filters</h2>
+        <ul class="filter-list list">
+          <li><button class="filter-btn" type="button">All</button></li>
+          <li><button class="filter-btn" type="button">Web Site</button></li>
+          <li><button class="filter-btn" type="button">App</button></li>
+          <li><button class="filter-btn" type="button">Design</button></li>
+          <li><button class="filter-btn" type="button">Marketing</button></li>
         </ul>
 
-        <!-- create list of examples-->
-        <h2 class="hiden-text">Examples of work</h2>
-        <ul class="list">
+        <!-- list of examples-->
+        <h2 class="hiden">Examples of work</h2>
+        <ul class="examples-list list">
           <li>
-            <h2 class="list-items">Banking App Interface Concept</h2>
-            <p class="item-text">App</p>
+            <h2 class="examples-item item-title">Banking App Interface Concept</h2>
+            <p class="examples-text text">App</p>
             <img
               src="./images/portfolio/banking-app-interface-concept.jpg"
               alt="Banking App Interface Concept"
@@ -62,9 +64,9 @@
             <!-- style="display: block" -->
           </li>
           <li>
-            <h2 class="list-items">Cashless Payment</h2>
-            <p class="item-text">Marketing</p>
-            <p class="text-behind">
+            <h2 class="examples-item item-title">Cashless Payment</h2>
+            <p class="examples-text text">Marketing</p>
+            <p class="examples-text-behind">
               14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
               App · Exotic Fruit Ecommerce App · Cloud Storage App
             </p>
@@ -76,8 +78,8 @@
             />
           </li>
           <li>
-            <h2 class="list-items">Meditaion App</h2>
-            <p class="item-text">App</p>
+            <h2 class="examples-item item-title">Meditaion App</h2>
+            <p class="examples-text text">App</p>
             <img
               src="./images/portfolio/meditaion-app.jpg"
               alt="Meditaion App"
@@ -86,8 +88,8 @@
             />
           </li>
           <li>
-            <h2 class="list-items">Taxi Service</h2>
-            <p class="item-text">Marketing</p>
+            <h2 class="examples-item item-title">Taxi Service</h2>
+            <p class="examples-text text">Marketing</p>
             <img
               src="./images/portfolio/taxi-service.jpg"
               alt="Taxi Service"
@@ -96,8 +98,8 @@
             />
           </li>
           <li>
-            <h2 class="list-items">Screen Illustrations</h2>
-            <p class="item-text">Design</p>
+            <h2 class="examples-item item-title">Screen Illustrations</h2>
+            <p class="examples-text text">Design</p>
             <img
               src="./images/portfolio/screen-illustrations.jpg"
               alt="Screen Illustrations"
@@ -106,8 +108,8 @@
             />
           </li>
           <li>
-            <h2 class="list-items">Online Courses</h2>
-            <p class="item-text">Marketing</p>
+            <h2 class="examples-item item-title">Online Courses</h2>
+            <p class="examples-text text">Marketing</p>
             <img
               src="./images/portfolio/online-courses.jpg"
               alt="Online Courses"
@@ -116,8 +118,8 @@
             />
           </li>
           <li>
-            <h2 class="list-items">Instagram Stories Concept</h2>
-            <p class="item-text">Design</p>
+            <h2 class="examples-item item-title">Instagram Stories Concept</h2>
+            <p class="examples-text text">Design</p>
             <img
               src="./images/portfolio/instagram-stories-concept.jpg"
               alt="Instagram Stories Concept"
@@ -126,8 +128,8 @@
             />
           </li>
           <li>
-            <h2 class="list-items">Organic Food</h2>
-            <p class="item-text">Web Site</p>
+            <h2 class="examples-item item-title">Organic Food</h2>
+            <p class="examples-text text">Web Site</p>
             <img
               src="./images/portfolio/organic-food.jpg"
               alt="Organic Food"
@@ -136,8 +138,8 @@
             />
           </li>
           <li>
-            <h2 class="list-items">Fresh Coffee</h2>
-            <p class="item-text">Web Site</p>
+            <h2 class="examples-item item-title">Fresh Coffee</h2>
+            <p class="examples-text text">Web Site</p>
             <img
               src="./images/portfolio/fresh-coffee.jpg"
               alt="Fresh Coffee"
@@ -150,8 +152,10 @@
     </main>
 
     <footer class="footer">
-      <a class="logo line-height" href="./index.html">WEB<span class="logo-footer">STUDIO</span></a>
-      <p class="text-footer">
+      <a class="logo link line-height" href="./index.html"
+        >WEB<span class="footer-logo">STUDIO</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
